// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PropertyBagColumnRendererTest render with a combination of expanded and not expanded objects 1`] = `
"<div className="property-bag-container">
  <div className="property-bag-div">
    <span className="display-name">
      display e: 
    </span>
    <div className="expanded-property-div">
      <span className="display-name">
        key1: 
      </span>
      value1
    </div>
    <div className="expanded-property-div">
      <span className="display-name">
        key2: 
      </span>
      value2
    </div>
  </div>
  <div className="property-bag-div">
    <span className="display-name">
      display b: 
    </span>
    -1
  </div>
</div>"
`;

exports[`PropertyBagColumnRendererTest render with expanded object 1`] = `
"<div className="property-bag-container">
  <div className="property-bag-div">
    <span className="display-name">
      display e: 
    </span>
    <div className="expanded-property-div">
      <span className="display-name">
        key1: 
      </span>
      value1
    </div>
    <div className="expanded-property-div">
      <span className="display-name">
        key2: 
      </span>
      value2
    </div>
  </div>
</div>"
`;

exports[`PropertyBagColumnRendererTest render with expanded object where some have null values 1`] = `
"<div className="property-bag-container">
  <div className="property-bag-div">
    <span className="display-name">
      display null values: 
    </span>
    <div className="expanded-property-div">
      <span className="display-name">
        key1: 
      </span>
      value1
    </div>
    <div className="expanded-property-div">
      <span className="display-name">
        key2
      </span>
    </div>
  </div>
</div>"
`;

exports[`PropertyBagColumnRendererTest render, default value 1`] = `
"<div className="property-bag-container">
  <div className="property-bag-div">
    <span className="display-name">
      display a: 
    </span>
    is a default value
  </div>
  <div className="property-bag-div">
    <span className="display-name">
      display b: 
    </span>
    -1
  </div>
</div>"
`;

exports[`PropertyBagColumnRendererTest render, empty object 1`] = `
"<div className="property-bag-container">
  <div className="property-bag-div">
    <span className="display-name">
      display f: 
    </span>
    default
  </div>
</div>"
`;

exports[`PropertyBagColumnRendererTest render, one property from the bag 1`] = `
<div
  className="property-bag-container"
>
  <div
    className="property-bag-div"
  >
    <span
      className="display-name"
    >
      display name: 
    </span>
    <React.Fragment>
      string value
    </React.Fragment>
  </div>
</div>
`;

exports[`PropertyBagColumnRendererTest render, property is null, no default value 1`] = `"<div className="property-bag-container" />"`;

exports[`PropertyBagColumnRendererTest render, several properties from the bag 1`] = `
"<div className="property-bag-container">
  <div className="property-bag-div">
    <span className="display-name">
      display a: 
    </span>
    string value
  </div>
  <div className="property-bag-div">
    <span className="display-name">
      display b: 
    </span>
    -1
  </div>
</div>"
`;
